# radiation-pattern

./: Antenna.cpp  Antenna.hpp  CMakeLists.txt  CoordinateSystem.hpp  README.md  camera.hpp  colormap_data.hpp  colormaps.hpp  marked.xpm  nice_range.hpp  plot3D.hpp  plot_rendering2.cpp  shader.hpp  surface.hpp  text_render.hpp
shaders/: axis.frag  axis.vert  grid.frag  surface.frag  surface.vert  text.vert
src/: Angle.cpp  Angle.h  AntennasGrid.cpp  AntennasGrid.h  CMakeLists.txt  ControlPanel.cpp  ControlPanel.hpp  CoordinateSystem.hpp  CreatePattern.cpp  CreatePattern.h  GridPanel.cpp  GridPanel.hpp  MainApp.cpp  MainApp.hpp  MainFrame.cpp  MainFrame.hpp  MyApp.cpp  MyApp.h  MyApp.hpp  MyFrame.cpp  MyFrame.h  MyFrame.hpp  OGLPane.cpp  OGLPane.h  OGLPane.hpp  PlotScene.cpp  PlotScene.hpp  RenderTimer.cpp  RenderTimer.h  camera.hpp  colormap_data.hpp  colormaps.hpp  myfont.h  nice_range.hpp  plot3D.hpp  shader.hpp  surface.hpp  text_render.hpp
